linter/src/rules/snapshots/squawk_linter__rules__adding_field_with_default__test_rules__adding_field_with_default-2.snap
---
source: linter/src/rules/adding_field_with_default.rs
expression: "check_sql(ok_sql, &[\"prefer-robust-stmts\".into()])"
---
Ok(
    [],
)
