linter/src/rules/snapshots/squawk_linter__rules__adding_field_with_default__test_rules__adding_field_with_default_in_version_11-2.snap
---
source: linter/src/rules/adding_field_with_default.rs
expression: "check_sql(ok_sql, &[RuleViolationKind::PreferRobustStmts],\n    Option<PgVersion>::parse(\"11.0.0\").unwrap())"
---
Ok(
    [],
)
